# noir-metrics

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  metrics.json
.cargo/: mutants.toml
src/: cli.rs  lib.rs  main.rs  output.rs  project.rs
src/analysis/: file.rs  project.rs
src/analysis/snapshots/: noir_metrics__analysis__file__tests__counts_lines_and_tests_exactly.snap
tests/: basic.rs  cli_human.rs  cli_json.rs
tests/fixtures/file_metrics/: Nargo.toml
tests/fixtures/file_metrics/src/: metrics.nr
tests/fixtures/project_metrics/: Nargo.toml
tests/fixtures/project_metrics/src/: main.nr  main2.nr  pub_todo.nr
tests/snapshots/: cli_json__cli_json_output_snapshot.snap
