[package]
name = "noir-metrics"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Source code metrics for Noir (Nargo) projects."
repository = "https://github.com/mutorium/noir-metrics"
homepage = "https://mutorium.com"
readme = "README.md"
keywords = ["noir", "nargo", "metrics", "zk", "security"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
